--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap');
+
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Tajawal', Arial, Helvetica, sans-serif;
 }
+
 
 @layer utilities {
   .text-balance {
